--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -11,7 +11,7 @@
     
 
     &__form{
-        padding: 2.5rem 0;
+        padding: $padding-med 0;
 
         &--title{
             color: $color-platinium;
@@ -116,12 +116,16 @@
         width: 100%;
         min-height: 6.43rem;
         max-height: 12rem;
-
     }
 
+    
     &__btn-form,
     &__btn-form:link,
     &__btn-form:active{        
+        padding: 1rem 2rem;
+        background-color: rgba($color-white, .2);
+        border: none;
+        cursor: pointer;
         background-color: transparent;
         border: 2px solid rgba($color-celeste, .2);
         transition: all .3s;
