--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -2,7 +2,7 @@
     background-color: rgba($color-silver, .3);
     grid-row: 4/5;
     grid-column: full-start/full-end;    
-    padding: 10rem 10%;
+    padding: $padding-big 10%;
     
     &__container{
         // height: 60vh;
@@ -10,39 +10,38 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
         gap: 10rem 5rem;        
+        justify-content: center;
     }
     
 }
 
 .card{
-    background-color: $color-white;
     perspective: 180rem;
     -moz-perspective: 180rem;
     position: relative;
-    height: 45rem;
+    height: 60vh;
+    max-width: 60rem;
     
     
     &__side{
-        color: white;
-        font-size: 2rem;
-        
+        background: rgba($color-white, .6);
         height: inherit;
-        transition: all 1s ease-in-out;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;    
+        transition: all .6s ease-in-out;
         backface-visibility: hidden;
-        border-radius: 7px;
-
+        border-radius: 5px;
         display: flex;
         flex-direction: column;
+        // overflow: hidden;
         
         &::after{
             content: '';
             position: absolute;
             background: rgba($color-raisin-black, .5);
-            bottom: -30px;
+            bottom: -40px;
             left: 5%;
             width: 90%;
             height: 12px;
@@ -50,40 +49,141 @@
             z-index: -1;
             filter: blur(12px);
         }
-
-        &--front{
-            // background-color: $color-tangerine ;            
+        
+        
+        &--front{     
+            transform: rotateY(0);
         }
         
         &--back{
             transform: rotateY(180deg);
-            background-color: $color-tangerine ;
-            
-        }
-    }
-
-    &:hover &__side--front{
-        transform: rotateY(-180deg);
-    }
-
-    &:hover &__side--back{
-        transform: rotateY(0);
-    }
-
-    &__image{
-        background-size: cover;
-        background-position: right;
-        
-        height: 25rem;
-        &--1{
-            background-image: url(../img/jpg/project.jpg);
         }
     }
     
-    &__title{
-        background-color: orange;
-        color: black;
-        align-self: center;
-        margin: auto 0;
+    &:hover &__side--front{
+        transform: rotateY(-180deg);
     }
+    
+    &:hover &__side--back{
+        transform: rotateY(0);
+    }
+    
+    &__image{
+        // height: calc(100% - 33.33%);
+        flex: 1;
+        // object-fit: cover;
+        // object-position: right center;
+        background-size: cover;
+        background-position: center right;
+        // border-radius: 5px 5px 0 0;//same border radius than SIDE
+        background-blend-mode: screen;
+        
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100% );
+        border-radius: 5px 5px 0 0;
+        
+        &--1{
+            background-image:   linear-gradient(to bottom, rgba($color-tangerine, .7) 0%, rgba($color-white, .01) 100%),
+                                url(../img/jpg/project.jpg);
+                    }
+    }
+    
+    &__title{
+        border: 1px solid rgba($color-tangerine, .5);
+        font-family: $font-primary;
+        font-size: $font-big;
+        font-weight: 400;
+        align-self: center;
+        margin: 3rem 0;
+        padding: .5rem 3rem;
+        position: relative;
+        color: $color-raisin-black;
+        // background-color: red;
+        
+       
+    }
+    span.tab{
+        background-color: rgba($color-tangerine, 1.0);
+        height: 5rem;
+        &--upper{
+            clip-path: polygon(0 0, 100% 0, 100% 5%,0 100% );
+            border-radius: 5px 5px 0 0;
+        }
+
+        &--lower{
+            clip-path: polygon(0 95%, 100% 0, 100% 100%,0 100% );
+            border-radius: 0 0 5px 5px;
+        }
+    }
+    .project__description{
+        height: 60%;
+        // background-color: yellowgreen;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+
+        
+        &--top{
+            // background-color: lightslategray;
+            flex: 1;
+            overflow-y: auto;
+            padding: 2rem 7%;
+            font-family: $font-primary;
+            color: $color-sonic-silver;
+            font-size: $font-med;
+            font-weight: 400;
+            margin: 1rem 0;
+            
+        }
+       
+
+        &--bottom{
+            // background-color: lightskyblue;
+            flex: 0 1 5rem;
+            display: flex;
+            justify-content: center;
+            position: relative;
+            padding: 1.5rem 0;
+
+            &::before{
+                position: absolute;
+                content: '';
+                top: 0;
+                left: 15%;
+                width: 70%;
+                height: 1px;
+                background: rgba($color-sonic-silver,  .15);
+            }
+            
+            &::after{
+                position: absolute;
+                content: '';
+                bottom: 0;
+                left: 15%;
+                width: 70%;
+                height: 1px;
+                background: rgba($color-sonic-silver,  .15);
+            }
+        }
+    }
+    
+    .project__icon{
+        height: 30px;
+        width: 30px;
+        fill: rgba($color-electric-indigo, .4);
+        // fill: rgba($color-red-salsa, .5);
+        margin: 0 1.5rem;
+        
+    }
+
+    .project__btn-box{
+        display: flex;
+        justify-items: center;
+        padding: 5rem 0;        
+        position: relative;
+        // background: lightcoral;
+    }
+
+
+    
+
 }
