--- a/css/style.css
+++ b/css/style.css
@@ -66,49 +66,55 @@ body {
   grid-column: full-start/full-end; }
 
 .footer {
-  display: none;
   background-color: #144B66;
   grid-row: 6/7;
   grid-column: full-start/full-end;
+  display: grid;
+  grid-template-columns: 1fr [mid-start] repeat(3, minmax(max-content, 1fr)) [mid-end] 1fr;
+  grid-template-rows: repeat(2, minmax(min-content, max-content));
+  gap: 2rem;
+  justify-items: center; }
+
+.form-container {
+  padding: 7rem 0;
+  grid-row: 1/2;
+  grid-column: mid-start / mid-end; }
+
+.form {
   display: flex;
   flex-direction: column;
-  align-items: center; }
-  .footer__form {
-    padding: 7rem 0; }
-    .footer__form--title {
-      color: #ECECEB;
-      font-family: "Montserrat", sans-serif;
-      font-weight: 400;
-      font-size: 2.6rem;
-      text-align: center;
-      text-transform: uppercase;
-      margin-bottom: 3rem;
-      position: relative; }
-      .footer__form--title::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 1.5px;
-        background: #ECECEB;
-        transform: scaleX(0.6); }
-  .footer__form-box {
-    border: 2px solid rgba(23, 86, 118, 0.4);
-    border-radius: 3px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column;
-    box-shadow: -7px 7px 1.5rem rgba(0, 0, 0, 0.7);
-    padding: 3rem 8% 1.5rem;
-    width: 100%; }
-  .footer__group {
+  border-radius: 5px;
+  box-shadow: -7px 7px 1.5rem rgba(0, 0, 0, 0.7);
+  border: 2px solid rgba(23, 86, 118, 0.4);
+  padding: 3rem 7% 1.5rem;
+  width: 80vw;
+  max-width: 40rem; }
+  .form__title {
+    color: #ECECEB;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 2.6rem;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 3rem;
+    position: relative; }
+    .form__title::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 15%;
+      width: 70%;
+      height: 1.5px;
+      background: #ECECEB;
+      transform: scaleX(0.6); }
+  .form__group {
     margin: .5rem 0; }
-    .footer__group--4 {
+    .form__group--3 input {
+      height: 5rem; }
+    .form__group--4 {
       margin-top: 1.5rem;
       margin-left: auto; }
-  .footer__input, .footer__input:active, .footer__input:link {
+  .form__input, .form__input:active, .form__input:link {
     color: inherit;
     background-color: rgba(58, 207, 202, 0.1);
     border: none;
@@ -117,30 +123,31 @@ body {
     width: 100%;
     display: block;
     border-bottom: 3px solid transparent; }
-    .footer__input::placeholder, .footer__input:active::placeholder, .footer__input:link::placeholder {
+    .form__input::placeholder, .form__input:active::placeholder, .form__input:link::placeholder {
       color: rgba(58, 207, 202, 0.5); }
-    .footer__input:focus, .footer__input:active:focus, .footer__input:link:focus {
+    .form__input:focus, .form__input:active:focus, .form__input:link:focus {
       outline: none;
       box-shadow: -0.3rem 0.3rem 0.8rem rgba(0, 0, 0, 0.4);
       color: #3acfca;
       border-bottom: 3px solid #9DE7E4; }
-    .footer__input:focus:invalid, .footer__input:active:focus:invalid, .footer__input:link:focus:invalid {
+    .form__input:focus:invalid, .form__input:active:focus:invalid, .form__input:link:focus:invalid {
       border-bottom: 3px solid #FB3640; }
-  .footer__label {
+  .form__label {
     display: block;
     transition: all .4s;
     transform: translate(0.9rem, -4.5em);
     font-size: 1.2rem;
     font-weight: 600; }
-  .footer__input:placeholder-shown ~ .footer__label {
+  .form__input:placeholder-shown ~ .form__label {
     opacity: 0;
     visibility: hidden;
     transform: translate(0.9rem, -2.8rem); }
-  .footer textarea {
-    width: 100%;
-    min-height: 6.43rem;
-    max-height: 12rem; }
-  .footer__btn-form, .footer__btn-form:link, .footer__btn-form:active {
+  .form textarea {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 10rem;
+    max-height: 20rem; }
+  .form__btn, .form__btn:link, .form__btn:active {
     padding: 1rem 2rem;
     background-color: rgba(255, 255, 255, 0.2);
     border: none;
@@ -149,33 +156,36 @@ body {
     border: 2px solid rgba(157, 231, 228, 0.2);
     transition: all .3s;
     color: #ECECEB; }
-    .footer__btn-form:hover, .footer__btn-form:link:hover, .footer__btn-form:active:hover {
+    .form__btn:hover, .form__btn:link:hover, .form__btn:active:hover {
       background-color: rgba(157, 231, 228, 0.2);
       border: 2px solid rgba(157, 231, 228, 0.6);
       transform: scale(1.1); }
-    .footer__btn-form:active, .footer__btn-form:link:active, .footer__btn-form:active:active {
+    .form__btn:active, .form__btn:link:active, .form__btn:active:active {
       background: rgba(251, 54, 64, 0.7); }
-  .footer__social {
-    background-color: #103F56;
-    width: 100%;
-    padding: 1.5%; }
-  .footer__icon-box {
+
+.social {
+  grid-row: 2/-1;
+  grid-column: 1 / -1;
+  background-color: #103F56;
+  width: 100%;
+  padding: 2%; }
+  .social__icon-box {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
-    .footer__icon-box--link {
+    .social__icon-box--link {
       color: transparent; }
-    .footer__icon-box--item {
+    .social__icon-box--item {
       fill: rgba(58, 207, 202, 0.7);
       height: 3.7rem;
       width: 3.7rem;
       margin: 1rem 2rem;
       transition: all .3s;
       cursor: pointer; }
-      .footer__icon-box--item:hover {
+      .social__icon-box--item:hover {
         fill: #ECECEB;
         transform: translate(3px, -2px) scale(1.2); }
-  .footer__copyright {
+  .social__copyright {
     font-size: 1.5rem;
     font-weight: 100;
     text-transform: capitalize;
@@ -208,7 +218,7 @@ body {
   -moz-perspective: 180rem;
   position: relative;
   height: 60vh;
-  max-width: 60rem; }
+  max-width: 45rem; }
   .card__side {
     background: rgba(255, 255, 255, 0.6);
     height: inherit;
@@ -398,7 +408,8 @@ body {
     .skills__carousel .slide {
       height: 100px;
       display: flex;
-      align-items: center; }
+      align-items: center;
+      animation: slide-me 30s linear infinite; }
       .skills__carousel .slide__icon {
         fill: rgba(157, 231, 228, 0.8);
         height: 3rem;
