header hexagons background and project card 3d adjustments

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,6 +1,6 @@
 .about{
-    background-color: $color-indigo-dye-dark;
+    background-color: red;
     grid-row: 3/4;
     grid-column: full-start/full-end;
-    // height: 10rem;
+    
 }
