--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ body {
 
 .main__container {
   display: grid;
-  grid-template-rows: 10vh minmax(min-content, 5rem) repeat(4, min-content);
-  grid-template-columns: [full-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, 12.5%) [col-end]) [center-end] 1fr [full-end]; }
+  grid-template-rows: 92vh min-content repeat(4, minmax(min-content, max-content));
+  grid-template-columns: [full-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, max-content) [col-end]) [center-end] 1fr [full-end]; }
 
 .btn {
   position: absolute;
@@ -34,13 +34,13 @@ body {
   text-align: center;
   line-height: 5rem;
   font-family: "Ubuntu", sans-serif;
-  font-size: 2rem;
+  font-size: 2.2rem;
   text-decoration: none;
   letter-spacing: 2px;
   color: #D81159;
   transition-duration: .2s; }
   .btn:hover {
-    font-size: 2.6rem; }
+    font-size: 2.8rem; }
   .btn svg,
   .btn svg rect {
     position: absolute;
@@ -61,13 +61,13 @@ body {
       stroke: rgba(110, 36, 229, 0.7); }
 
 .about {
-  background-color: #103F56;
+  background-color: red;
   grid-row: 3/4;
   grid-column: full-start/full-end; }
 
 .footer {
   background-color: #144B66;
-  grid-row: 6/7;
+  grid-row: 6/-1;
   grid-column: full-start/full-end;
   display: grid;
   grid-template-columns: 1fr [mid-start] repeat(3, minmax(max-content, 1fr)) [mid-end] 1fr;
@@ -87,13 +87,13 @@ body {
   box-shadow: -7px 7px 1.5rem rgba(0, 0, 0, 0.7);
   border: 2px solid rgba(23, 86, 118, 0.4);
   padding: 3rem 7% 1.5rem;
-  width: 80vw;
+  width: 90vw;
   max-width: 40rem; }
   .form__title {
     color: #ECECEB;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-size: 2.6rem;
+    font-size: 2.8rem;
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 3rem;
@@ -197,10 +197,104 @@ body {
   grid-row: 1/2;
   grid-column: full-start/full-end; }
 
+.hexagons-box {
+  background: #111;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  animation: change-color 4s linear infinite; }
+
+.row {
+  display: inline-flex;
+  margin-top: -30px;
+  margin-left: -55px; }
+
+.row:nth-child(even) {
+  margin-left: 1px; }
+
+.hexagon {
+  position: relative;
+  background: #111;
+  width: 110px;
+  height: 109px;
+  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  transform: rotate(90deg);
+  margin: 1px;
+  transition: 2s;
+  cursor: crosshair; }
+  .hexagon:hover {
+    transition: 0s;
+    background: green; }
+  .hexagon:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 3; }
+  .hexagon:after {
+    content: '';
+    position: absolute;
+    top: 4px;
+    bottom: 4px;
+    left: 4px;
+    right: 4px;
+    /*   top: 10%;
+        bottom: 10%;
+        left: 1%;
+        right: 1%; */
+    background: #111;
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    z-index: 5; }
+
+@keyframes change-color {
+  0% {
+    filter: hue-rotate(0deg); }
+  100% {
+    filter: hue-rotate(360deg); } }
+
 .navigation {
   background-color: #4B13A4;
   grid-row: 2/3;
-  grid-column: full-start/full-end; }
+  grid-column: full-start/full-end;
+  position: sticky;
+  top: 0;
+  z-index: 20; }
+
+.nav-container {
+  height: 100%;
+  background: #4b13a4;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 5rem;
+  padding: 2rem 5%;
+  flex-wrap: wrap; }
+
+.nav-item {
+  list-style: none;
+  text-align: center;
+  color: white;
+  border-radius: 50px;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background: transparent;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  transition: all .1s;
+  padding: 1rem 3rem;
+  backface-visibility: hidden;
+  box-shadow: -5px -5px 7px rgba(134, 72, 234, 0.15), -4px -4px 7px rgba(134, 72, 234, 0.15), 5px 5px 7px rgba(0, 0, 0, 0.15); }
+  .nav-item:active {
+    box-shadow: inset -5px -5px 7px rgba(134, 72, 234, 0.2), inset -4px -4px 7px rgba(134, 72, 234, 0.2), inset 5px 5px 7px rgba(0, 0, 0, 0.15);
+    font-weight: 400;
+    color: #E7DAFB; }
+  .nav-item:hover {
+    transform: scale(0.95) translateY(-1px); }
 
 .projects {
   background-color: rgba(194, 194, 193, 0.3);
@@ -218,7 +312,7 @@ body {
   -moz-perspective: 180rem;
   position: relative;
   height: 60vh;
-  max-width: 45rem; }
+  max-width: 40rem; }
   .card__side {
     background: rgba(255, 255, 255, 0.6);
     height: inherit;
@@ -226,16 +320,17 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    transition: all .6s ease-in-out;
+    transition: all 1s ease-in-out;
     backface-visibility: hidden;
     border-radius: 5px;
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    transform-style: preserve-3d; }
     .card__side::after {
       content: '';
       position: absolute;
-      background: rgba(41, 40, 42, 0.5);
-      bottom: -40px;
+      background: #29282a;
+      bottom: -30px;
       left: 5%;
       width: 90%;
       height: 12px;
@@ -253,7 +348,7 @@ body {
   .card__image {
     flex: 1;
     background-size: cover;
-    background-position: center right;
+    background-position: center;
     background-blend-mode: screen;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     border-radius: 5px 5px 0 0; }
@@ -262,7 +357,7 @@ body {
   .card__title {
     border: 1px solid rgba(245, 139, 0, 0.5);
     font-family: "Raleway", sans-serif;
-    font-size: 2.6rem;
+    font-size: 2.8rem;
     font-weight: 400;
     align-self: center;
     margin: 3rem 0;
@@ -328,7 +423,7 @@ body {
 .skills {
   grid-row: 5/6;
   grid-column: center-start/center-end;
-  padding: 10rem 0;
+  padding: 10rem 10%;
   color: #29282A; }
   .skills__box {
     display: grid;
@@ -375,7 +470,7 @@ body {
         flex: 1 1 100%;
         margin-top: .5rem 0;
         font-family: "Montserrat", sans-serif;
-        font-size: 1.3rem;
+        font-size: 1rem;
         text-transform: capitalize;
         font-weight: 300;
         text-align: center; }
