--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,7 +1,59 @@
-.navigation{
+.navigation {
     background-color: $color-purple;
     grid-row: 2/3;
     grid-column: full-start/full-end;
+    position: sticky;
+    top: 0; 
+    z-index: 20;
+    
+}
 
-    // height: 8rem;
+.nav-container {
+    height: 100%;
+    background: rgba($color-purple, 1);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 5rem;
+    padding: 2rem 5%;
+    flex-wrap: wrap;
+
+}
+
+
+.nav-item {
+    list-style: none;
+    text-align: center;
+    color: rgba($color-white, 1.0);
+    border-radius: 50px;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background: transparent;
+    font-family: $font-secondary;
+    font-size: $font-small;
+    font-weight: 400;
+    transition: all .1s ;
+    padding: 1rem 3rem;
+    // margin: 0 3rem;
+    backface-visibility: hidden;
+    box-shadow: -5px -5px 7px rgba($color-purple-light, .15),
+                -4px -4px 7px rgba($color-purple-light, .15),
+                 5px 5px 7px rgba(0, 0, 0, .15);
+
+    &:active {
+        box-shadow: inset -5px -5px 7px rgba($color-purple-light, .2),
+            inset -4px -4px 7px rgba($color-purple-light, .2),
+            inset 5px 5px 7px rgba(0, 0, 0, .15);
+        font-weight: 400;
+        color: $color-purple-lighter;
+    }
+
+    &:hover {
+        transform: scale(.95) translateY(-1px);
+        // font-weight: 400;
+    }
+
+
+
 }
