--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 .main__container {
   display: grid;
-  grid-template-rows: 92vh min-content repeat(4, minmax(min-content, max-content));
+  grid-template-rows: 88vh minmax(12vh, min-content) repeat(4, minmax(min-content, max-content));
   grid-template-columns: [full-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, max-content) [col-end]) [center-end] 1fr [full-end]; }
 
 .btn {
@@ -195,10 +195,11 @@ body {
 .header {
   background-color: #8F2D56;
   grid-row: 1/2;
-  grid-column: full-start/full-end; }
+  grid-column: full-start/full-end;
+  position: relative; }
 
 .hexagons-box {
-  background: #111;
+  background: black;
   position: relative;
   height: 100%;
   overflow: hidden;
@@ -216,37 +217,32 @@ body {
   position: relative;
   background: #111;
   width: 110px;
-  height: 109px;
-  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-  transform: rotate(90deg);
-  margin: 1px;
+  height: 110px;
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  margin: 2px;
   transition: 2s;
-  cursor: crosshair; }
+  cursor: pointer; }
   .hexagon:hover {
     transition: 0s;
-    background: green; }
+    background: orangered; }
   .hexagon:before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 50%;
+    width: 50%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.3);
     z-index: 3; }
   .hexagon:after {
     content: '';
     position: absolute;
-    top: 4px;
-    bottom: 4px;
-    left: 4px;
-    right: 4px;
-    /*   top: 10%;
-        bottom: 10%;
-        left: 1%;
-        right: 1%; */
+    top: 5px;
+    bottom: 5px;
+    left: 5px;
+    right: 5px;
     background: #111;
-    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
     z-index: 5; }
 
 @keyframes change-color {
@@ -255,46 +251,72 @@ body {
   100% {
     filter: hue-rotate(360deg); } }
 
-.navigation {
-  background-color: #4B13A4;
+.nav {
+  background: transparent;
   grid-row: 2/3;
   grid-column: full-start/full-end;
   position: sticky;
   top: 0;
-  z-index: 20; }
-
-.nav-container {
-  height: 100%;
-  background: #4b13a4;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 5rem;
-  padding: 2rem 5%;
-  flex-wrap: wrap; }
-
-.nav-item {
-  list-style: none;
-  text-align: center;
-  color: white;
-  border-radius: 50px;
-  cursor: pointer;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  background: transparent;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  transition: all .1s;
-  padding: 1rem 3rem;
-  backface-visibility: hidden;
-  box-shadow: -5px -5px 7px rgba(134, 72, 234, 0.15), -4px -4px 7px rgba(134, 72, 234, 0.15), 5px 5px 7px rgba(0, 0, 0, 0.15); }
-  .nav-item:active {
-    box-shadow: inset -5px -5px 7px rgba(134, 72, 234, 0.2), inset -4px -4px 7px rgba(134, 72, 234, 0.2), inset 5px 5px 7px rgba(0, 0, 0, 0.15);
+  z-index: 10; }
+  .nav__container {
+    background: #4b13a4;
+    background: linear-gradient(to bottom, #4b13a4 0%, #4b13a4 80%, rgba(75, 19, 164, 0.8) 90%, transparent 100%);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 5rem;
+    padding: 2rem 5%;
+    flex-wrap: wrap;
+    transition: all .5s; }
+    @media only screen and (max-width: 43.75em) {
+      .nav__container {
+        gap: 3rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .nav__container {
+        justify-content: space-evenly;
+        gap: 2rem; } }
+  .nav__container a,
+  .nav__container a:any-link {
+    opacity: 1;
+    color: whitesmoke;
+    text-decoration: none; }
+  @media only screen and (max-width: 37.5em) {
+    .nav__link {
+      display: none; } }
+  .nav__item {
+    list-style: none;
+    text-align: center;
+    color: white;
+    border-radius: 50px;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background: transparent;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 1rem;
     font-weight: 400;
-    color: #E7DAFB; }
-  .nav-item:hover {
-    transform: scale(0.95) translateY(-1px); }
+    padding: 1rem 3rem;
+    backface-visibility: hidden;
+    box-shadow: -4px -4px 7px rgba(134, 72, 234, 0.15), -4px -4px 7px rgba(134, 72, 234, 0.15), 5px 5px 7px rgba(0, 0, 0, 0.15); }
+    @media only screen and (max-width: 43.75em) {
+      .nav__item {
+        padding: 1rem 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .nav__item {
+        padding: 1.2rem; } }
+    .nav__item:hover {
+      box-shadow: inset -5px -5px 7px rgba(134, 72, 234, 0.2), inset -4px -4px 7px rgba(134, 72, 234, 0.2), inset 5px 5px 7px rgba(0, 0, 0, 0.15);
+      font-weight: 400;
+      color: #E7DAFB; }
+  .nav__icon {
+    display: none; }
+    @media only screen and (max-width: 37.5em) {
+      .nav__icon {
+        opacity: 1;
+        display: block;
+        height: 2.5rem;
+        width: 2.5rem;
+        fill: rgba(236, 236, 235, 0.7); } }
 
 .projects {
   background-color: rgba(194, 194, 193, 0.3);
@@ -311,7 +333,7 @@ body {
   perspective: 180rem;
   -moz-perspective: 180rem;
   position: relative;
-  height: 60vh;
+  height: 75vh;
   max-width: 40rem; }
   .card__side {
     background: rgba(255, 255, 255, 0.6);
