--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,17 +2,18 @@
     background-color: $color-quinacridone-magenta;
     grid-row: 1/2;
     grid-column: full-start/full-end;
-    
+    position: relative;
 
     
-}
-
-.hexagons-box{
-    background: #111;
+  }
+   
+  .hexagons-box{
+    background: black;
     position: relative;
     height: 100%;
     overflow: hidden;
     animation: change-color 4s linear infinite;
+    
 }
 
 
@@ -22,45 +23,40 @@
     margin-left: -55px;
 }
 .row:nth-child(even){
-    margin-left: 1px;
+  margin-left: 1px;
 }
 .hexagon{
     position: relative;
     background: #111;
       width: 110px;    
-      height: 109px;
-      clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-      transform: rotate(90deg);
-      margin: 1px;    
+      height: 110px;
+      clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
+      margin: 2px;    
       transition: 2s;
-      cursor: crosshair;
+      cursor: pointer;
       &:hover{
-          transition: 0s;
-        background: green;
-    }
+        transition: 0s;
+        background: orangered;
+      }
       &:before{
-          content: '';
+        content: '';
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 50%;
+        width: 50%;
+        height: 100%;
         background: rgba(0,0,0,.3);
         z-index: 3;
       }
       &:after{
         content: '';
         position: absolute;
-        top: 4px;
-        bottom: 4px;
-        left: 4px;
-        right: 4px;
-        /*   top: 10%;
-        bottom: 10%;
-        left: 1%;
-        right: 1%; */
+        top: 5px;
+        bottom: 5px;
+        left: 5px;
+        right: 5px;
         background: #111;
-        clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+        clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
         z-index: 5;
         
       }
