--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ body {
 
 .main__container {
   display: grid;
-  grid-template-rows: 88vh minmax(12vh, min-content) repeat(4, minmax(min-content, max-content));
-  grid-template-columns: [full-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, max-content) [col-end]) [center-end] 1fr [full-end]; }
+  grid-template-columns: [full-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, max-content) [col-end]) [center-end] 1fr [full-end];
+  grid-template-rows: 11vh 90vh repeat(4, minmax(min-content, max-content)); }
 
 .btn {
   position: absolute;
@@ -194,7 +194,7 @@ body {
 
 .header {
   background-color: #8F2D56;
-  grid-row: 1/2;
+  grid-row: 1/3;
   grid-column: full-start/full-end;
   position: relative; }
 
@@ -252,71 +252,65 @@ body {
     filter: hue-rotate(360deg); } }
 
 .nav {
-  background: transparent;
-  grid-row: 2/3;
+  background: rgba(0, 0, 0, 0.6);
+  grid-row: 1/2;
   grid-column: full-start/full-end;
-  position: sticky;
   top: 0;
-  z-index: 10; }
-  .nav__container {
-    background: #4b13a4;
-    background: linear-gradient(to bottom, #4b13a4 0%, #4b13a4 80%, rgba(75, 19, 164, 0.8) 90%, transparent 100%);
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0; }
+  @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+    .nav {
+      -webkit-backdrop-filter: blur(5px);
+      backdrop-filter: blur(10px); } }
+  .nav__logo {
+    margin-left: 3rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    gap: 5rem;
-    padding: 2rem 5%;
-    flex-wrap: wrap;
-    transition: all .5s; }
-    @media only screen and (max-width: 43.75em) {
-      .nav__container {
-        gap: 3rem; } }
-    @media only screen and (max-width: 37.5em) {
-      .nav__container {
-        justify-content: space-evenly;
-        gap: 2rem; } }
-  .nav__container a,
-  .nav__container a:any-link {
-    opacity: 1;
-    color: whitesmoke;
-    text-decoration: none; }
-  @media only screen and (max-width: 37.5em) {
-    .nav__link {
-      display: none; } }
-  .nav__item {
-    list-style: none;
-    text-align: center;
-    color: white;
-    border-radius: 50px;
-    cursor: pointer;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    background: transparent;
-    font-family: "Ubuntu", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    padding: 1rem 3rem;
-    backface-visibility: hidden;
-    box-shadow: -4px -4px 7px rgba(134, 72, 234, 0.15), -4px -4px 7px rgba(134, 72, 234, 0.15), 5px 5px 7px rgba(0, 0, 0, 0.15); }
-    @media only screen and (max-width: 43.75em) {
-      .nav__item {
-        padding: 1rem 2rem; } }
-    @media only screen and (max-width: 37.5em) {
-      .nav__item {
-        padding: 1.2rem; } }
-    .nav__item:hover {
-      box-shadow: inset -5px -5px 7px rgba(134, 72, 234, 0.2), inset -4px -4px 7px rgba(134, 72, 234, 0.2), inset 5px 5px 7px rgba(0, 0, 0, 0.15);
+    color: #ececeb; }
+    .nav__logo--middle {
+      font-size: 3.2rem;
       font-weight: 400;
-      color: #E7DAFB; }
-  .nav__icon {
-    display: none; }
-    @media only screen and (max-width: 37.5em) {
-      .nav__icon {
-        opacity: 1;
-        display: block;
-        height: 2.5rem;
-        width: 2.5rem;
-        fill: rgba(236, 236, 235, 0.7); } }
+      font-family: "Ubuntu", sans-serif; }
+    .nav__logo--arrow-back {
+      transform: rotate(180deg); }
+    .nav__logo--arrow-front, .nav__logo--arrow-back {
+      height: 40px;
+      width: 40px;
+      fill: currentColor; }
+  .nav__container {
+    list-style: none;
+    display: flex; }
+  .nav__item {
+    margin: 1rem;
+    color: #ECECEB;
+    text-decoration: none;
+    font-size: 1rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    letter-spacing: .6rem;
+    padding: 1rem 2rem;
+    text-align: center;
+    text-transform: uppercase;
+    transition-duration: .2s;
+    position: relative; }
+    .nav__item::before {
+      content: '';
+      position: absolute;
+      height: 2px;
+      width: 80%;
+      bottom: 0;
+      left: 10%;
+      border-radius: 10px;
+      transform: scale(0);
+      transition: all .6s;
+      background: #ECECEB; }
+    .nav__item:hover::before, .nav__item:active::before {
+      transform: scale(1); }
 
 .projects {
   background-color: rgba(194, 194, 193, 0.3);
