--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,531;1,558;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 
 *, *::after, *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-  font-family: "Ubuntu", sans-serif; }
+  box-sizing: inherit; }
 
 ::selection {
   background-color: #F58B00;
@@ -17,12 +18,17 @@ body {
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: 1.5px;
-  color: #ECECEB; }
+  color: #ECECEB;
+  font-family: "Ubuntu", sans-serif; }
 
 .main__container {
   display: grid;
   grid-template-columns: [full-start] 1fr [center-start] repeat(6, [col-start] minmax(min-content, max-content) [col-end]) [center-end] 1fr [full-end];
-  grid-template-rows: 11vh 90vh repeat(4, minmax(min-content, max-content)); }
+  grid-template-rows: 8vh 92vh repeat(4, minmax(auto, max-content));
+  position: relative; }
+
+.hex-shape {
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); }
 
 .btn {
   position: absolute;
@@ -58,37 +64,145 @@ body {
     .btn svg rect:hover {
       stroke-dasharray: 100,400;
       stroke-dashoffset: 272;
-      stroke: rgba(110, 36, 229, 0.7); }
+      stroke: rgba(110, 36, 229, 0.6); }
 
 .about {
-  background-color: red;
   grid-row: 3/4;
-  grid-column: full-start/full-end; }
+  grid-column: full-start/full-end;
+  padding: 10rem 0; }
+
+.about-box {
+  display: grid;
+  grid-template-rows: repeat(3, minmax(12rem, 16vw));
+  grid-template-columns: minmax(0.5rem, 1fr) repeat(3, minmax(12rem, 16vw)) minmax(0.5rem, 1fr);
+  gap: 4vw;
+  justify-content: center;
+  align-items: center; }
+  .about-box > *::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 50%;
+    background-color: rgba(0, 0, 0, 0.15); }
+  .about-box .outter-hex {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    height: 100%;
+    width: 100%;
+    background: #3acfca;
+    transform: scale(1); }
+  .about-box__item {
+    height: 100%;
+    width: 100%;
+    background: #3acfca;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 7%;
+    position: relative; }
+    .about-box__item span {
+      text-align: center;
+      text-transform: capitalize;
+      font-family: "Montserrat", sans-serif;
+      color: #ECECEB;
+      font-weight: 400;
+      letter-spacing: 5px;
+      font-size: 1rem;
+      line-height: 1.2; }
+      @media only screen and (max-width: 50em) {
+        .about-box__item span {
+          font-size: 1rem;
+          letter-spacing: 2px;
+          font-weight: 200; } }
+      @media only screen and (min-width: 62.5em) {
+        .about-box__item span {
+          font-size: 1.6rem; } }
+      @media only screen and (min-width: 87.5em) {
+        .about-box__item span {
+          font-size: 2.2rem;
+          line-height: 1.6; } }
+    .about-box__item--1 {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      transform: translate(calc(50% + (4vw / 2)), 25%); }
+    .about-box__item--2 {
+      grid-column: 4/5;
+      grid-row: 1/2;
+      transform: translate(calc(-50% - (4vw / 2)), 25%); }
+    .about-box__item--3 {
+      grid-column: 2/3;
+      grid-row: 2/3; }
+    .about-box__item--4 {
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.01) 100%), url(../img/jpg/mini.jpg);
+      background-image: url(../img/jpg/mini.jpg);
+      background-size: cover;
+      background-position: center;
+      transform: scale(0.95); }
+    .about-box__item--5 {
+      grid-column: 4/5;
+      grid-row: 2/3; }
+    .about-box__item--6 {
+      grid-column: 2/3;
+      grid-row: 3/4;
+      transform: translate(calc(50% + (4vw / 2)), -25%); }
+    .about-box__item--7 {
+      grid-column: 4/5;
+      grid-row: 3/4;
+      transform: translate(calc(-50% - (4vw / 2)), -25%); }
 
 .footer {
   background-color: #144B66;
   grid-row: 6/-1;
   grid-column: full-start/full-end;
   display: grid;
-  grid-template-columns: 1fr [mid-start] repeat(3, minmax(max-content, 1fr)) [mid-end] 1fr;
-  grid-template-rows: repeat(2, minmax(min-content, max-content));
+  grid-template-columns: 1fr [mid-start] repeat(3, 1fr) [mid-end] 1fr;
+  grid-template-rows: repeat(2, max-content);
   gap: 2rem;
   justify-items: center; }
 
 .form-container {
-  padding: 7rem 0;
+  margin: 5rem 0;
   grid-row: 1/2;
-  grid-column: mid-start / mid-end; }
+  grid-column: mid-start / mid-end;
+  position: relative;
+  z-index: 5; }
+  .form-container::before {
+    content: "";
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    bottom: 0;
+    left: 0;
+    height: 30px;
+    width: 50%;
+    transform-origin: right;
+    transform: skewy(-6deg);
+    z-index: -1;
+    filter: blur(10px); }
+  .form-container::after {
+    content: "";
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    bottom: 0;
+    right: 0;
+    height: 30px;
+    width: 50%;
+    transform-origin: left;
+    transform: skewy(6deg);
+    z-index: -1;
+    filter: blur(10px); }
 
 .form {
   display: flex;
   flex-direction: column;
+  background: #144B66;
   border-radius: 5px;
-  box-shadow: -7px 7px 1.5rem rgba(0, 0, 0, 0.7);
+  box-shadow: 0 -1px 0.5rem rgba(0, 0, 0, 0.3);
   border: 2px solid rgba(23, 86, 118, 0.4);
   padding: 3rem 7% 1.5rem;
   width: 90vw;
-  max-width: 40rem; }
+  max-width: 50rem; }
   .form__title {
     color: #ECECEB;
     font-family: "Montserrat", sans-serif;
@@ -193,8 +307,7 @@ body {
     color: #ECECEB; }
 
 .header {
-  background-color: #8F2D56;
-  grid-row: 1/3;
+  grid-row: 1 / 3;
   grid-column: full-start/full-end;
   position: relative; }
 
@@ -205,8 +318,48 @@ body {
   overflow: hidden;
   animation: change-color 4s linear infinite; }
 
+.header__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1; }
+  .header__title--text {
+    color: #ececeb;
+    font-size: 1.6rem;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    letter-spacing: .7rem;
+    white-space: normal;
+    pointer-events: none; }
+    @media only screen and (max-width: 21.87em) {
+      .header__title--text {
+        font-size: 1rem; } }
+    @media only screen and (min-width: 75em) {
+      .header__title--text {
+        font-size: 2.2rem; } }
+    @media only screen and (min-width: 87.5em) {
+      .header__title--text {
+        font-size: 3.2rem; } }
+    .header__title--text span {
+      font-family: inherit;
+      color: #F58B00;
+      color: #FB3640; }
+
+.header::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 60px;
+  background: linear-gradient(to bottom, transparent 0%, transparent 50%, #0f0f0f 100%); }
+
 .row {
   display: inline-flex;
+  z-index: 6;
   margin-top: -30px;
   margin-left: -55px; }
 
@@ -218,7 +371,6 @@ body {
   background: #111;
   width: 110px;
   height: 110px;
-  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
   margin: 2px;
   transition: 2s;
   cursor: pointer; }
@@ -251,66 +403,130 @@ body {
   100% {
     filter: hue-rotate(360deg); } }
 
+.nav.colored {
+  background: rgba(16, 63, 86, 0.95);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 15px rgba(1, 1, 1, 0.3); }
+
 .nav {
-  background: rgba(0, 0, 0, 0.6);
+  background: transparent;
   grid-row: 1/2;
   grid-column: full-start/full-end;
-  top: 0;
   z-index: 10;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  align-content: center;
+  transition: all .2s ease-in-out;
   position: sticky;
   top: 0; }
-  @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-    .nav {
-      -webkit-backdrop-filter: blur(5px);
-      backdrop-filter: blur(10px); } }
   .nav__logo {
-    margin-left: 3rem;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 4rem;
+    color: #ECECEB; }
+  .nav .logo__link {
+    text-decoration: none;
+    color: currentColor; }
+  .nav .logo__icon {
+    height: 7vh; }
+  .nav__list {
+    min-width: 60%;
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: auto; }
+    .nav__list .nav__item {
+      flex: 1;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 1rem; }
+    .nav__list .nav__link {
+      color: #ECECEB;
+      text-decoration: none;
+      font-size: 1.3rem;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400;
+      letter-spacing: .3rem;
+      text-transform: uppercase;
+      transition-duration: .2s;
+      position: relative; }
+      .nav__list .nav__link::before {
+        content: '';
+        position: absolute;
+        height: 2px;
+        width: 80%;
+        bottom: -3px;
+        left: 10%;
+        border-radius: 1rem;
+        transform: scale(0);
+        transition: all .6s;
+        background: #ECECEB; }
+      .nav__list .nav__link:hover::before, .nav__list .nav__link:active::before {
+        transform: scale(1.5, 1); }
+
+@media only screen and (max-width: 50em) {
+  .nav__toggler {
+    position: absolute;
+    top: -50%;
+    right: 3%;
+    transform: translate(-3%, 50%);
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #ececeb; }
-    .nav__logo--middle {
-      font-size: 3.2rem;
-      font-weight: 400;
-      font-family: "Ubuntu", sans-serif; }
-    .nav__logo--arrow-back {
-      transform: rotate(180deg); }
-    .nav__logo--arrow-front, .nav__logo--arrow-back {
-      height: 40px;
-      width: 40px;
-      fill: currentColor; }
-  .nav__container {
-    list-style: none;
-    display: flex; }
+    height: 100%;
+    width: 6rem;
+    transition: all .4s ease-in;
+    z-index: 50; }
+  .nav__toggler:hover .line {
+    width: 3rem; }
+  .line {
+    height: .3rem;
+    border-radius: 50px;
+    background: white;
+    margin: .5rem;
+    transition: all .3s ease-in-out; }
+    .line--1 {
+      width: 3rem; }
+    .line--2 {
+      width: 2rem; }
+    .line--3 {
+      width: 1rem; }
+  .nav__list {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    -webkit-clip-path: circle(30px at 95% -10%);
+    clip-path: circle(30px at 95% -10%);
+    transition: all .5s ease-in-out;
+    pointer-events: none;
+    background: rgba(16, 63, 86, 0.9); }
+    @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+      .nav__list {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px); } }
+  .nav__list.open {
+    -webkit-clip-path: circle(150vh at 95% -10%);
+    clip-path: circle(150vh at 95% -10%);
+    pointer-events: all; }
   .nav__item {
-    margin: 1rem;
-    color: #ECECEB;
-    text-decoration: none;
-    font-size: 1rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
-    letter-spacing: .6rem;
-    padding: 1rem 2rem;
-    text-align: center;
-    text-transform: uppercase;
-    transition-duration: .2s;
-    position: relative; }
-    .nav__item::before {
-      content: '';
-      position: absolute;
-      height: 2px;
-      width: 80%;
-      bottom: 0;
-      left: 10%;
-      border-radius: 10px;
-      transform: scale(0);
-      transition: all .6s;
-      background: #ECECEB; }
-    .nav__item:hover::before, .nav__item:active::before {
-      transform: scale(1); }
+    opacity: 0; }
+  .nav__item.fade {
+    opacity: 1; }
+  .nav__link {
+    font-size: 2.2rem !important; }
+  .nav__item:nth-child(1) {
+    transition: all 0.5s ease 0.2s; }
+  .nav__item:nth-child(2) {
+    transition: all 0.5s ease 0.4s; }
+  .nav__item:nth-child(3) {
+    transition: all 0.5s ease 0.6s; }
+  .nav__item:nth-child(4) {
+    transition: all 0.5s ease 0.7s; } }
 
 .projects {
   background-color: rgba(194, 194, 193, 0.3);
@@ -319,16 +535,23 @@ body {
   padding: 10rem 10%; }
   .projects__container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 10rem 5rem;
-    justify-content: center; }
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-auto-rows: 50rem;
+    column-gap: 7rem;
+    row-gap: 10rem;
+    justify-content: center;
+    align-items: center; }
 
 .card {
-  perspective: 180rem;
   -moz-perspective: 180rem;
+  perspective: 180rem;
   position: relative;
-  height: 75vh;
-  max-width: 40rem; }
+  height: 100%;
+  width: 100%;
+  max-width: 35rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
   .card__side {
     background: rgba(255, 255, 255, 0.6);
     height: inherit;
@@ -336,7 +559,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    transition: all 1s ease-in-out;
+    transition: all 1.3s cubic-bezier(0.12, 0.12, 0.3, 1.52);
     backface-visibility: hidden;
     border-radius: 5px;
     display: flex;
@@ -373,13 +596,13 @@ body {
   .card__title {
     border: 1px solid rgba(245, 139, 0, 0.5);
     font-family: "Raleway", sans-serif;
-    font-size: 2.8rem;
+    font-size: 2.2rem;
     font-weight: 400;
     align-self: center;
     margin: 3rem 0;
     padding: .5rem 3rem;
     position: relative;
-    color: #29282A; }
+    color: #707070; }
   .card span.tab {
     background-color: #f58b00;
     height: 5rem; }
@@ -444,20 +667,19 @@ body {
   .skills__box {
     display: grid;
     grid-template-columns: repeat(6, minmax(fit-content, 1fr));
+    grid-template-columns: repeat(6, minmax(max-content, 1fr));
     grid-template-rows: repeat(2, min-content);
     column-gap: 1rem;
     border: 1.5px solid rgba(157, 231, 228, 0.6);
-    border-radius: 7px;
-    overflow: hidden; }
+    border-radius: 7px; }
   .skills__content {
     grid-row: 1/2;
     grid-column: 1/-1;
     display: flex;
     flex-wrap: wrap; }
   .skills__card {
-    flex: 1 0 200px;
-    padding: 4rem 1rem;
-    flex-wrap: wrap; }
+    flex: 1 0 250px;
+    padding: 2rem; }
     .skills__card:not(:nth-last-child(1)) {
       border-right: 1.5px solid rgba(157, 231, 228, 0.4); }
     .skills__card__header {
@@ -465,31 +687,43 @@ body {
       justify-content: flex-start;
       align-items: center;
       flex-direction: column;
-      min-height: 10rem; }
+      min-height: 10rem;
+      margin: 1rem 0;
+      position: relative; }
+      .skills__card__header::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: 10%;
+        height: 1px;
+        width: 80%;
+        background: rgba(157, 231, 228, 0.3);
+        border-radius: 100px; }
     .skills__card__icon {
       fill: rgba(245, 139, 0, 0.8);
-      height: 3.5rem;
-      width: 3.5rem;
+      height: 4rem;
+      width: 4rem;
       margin-bottom: 1rem; }
     .skills__card__title {
-      color: rgba(112, 112, 112, 0.9);
-      font-weight: 600;
-      font-size: 1.6rem;
+      color: rgba(112, 112, 112, 0.8);
+      font-weight: 400;
+      font-size: 2.2rem;
       text-transform: uppercase;
       text-align: center; }
     .skills__card__list {
       list-style: none;
       display: flex;
       flex-wrap: wrap;
-      margin-top: .5rem; }
+      margin-top: 1rem; }
       .skills__card__list li {
-        flex: 1 1 100%;
-        margin-top: .5rem 0;
+        flex: 1 0 100%;
+        line-height: 2;
         font-family: "Montserrat", sans-serif;
-        font-size: 1rem;
+        font-size: 1.6rem;
         text-transform: capitalize;
-        font-weight: 300;
-        text-align: center; }
+        font-weight: 400;
+        text-align: center;
+        color: rgba(112, 112, 112, 0.8); }
   .skills__carousel {
     grid-column: 1/-1;
     grid-row: 2/3;
