--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,6 +1,127 @@
-.about{
-    background-color: red;
+.about {
     grid-row: 3/4;
     grid-column: full-start/full-end;
+    padding: $padding-big 0;
+
+}
+
+.about-box {
+    display: grid;
+    grid-template-rows: repeat(3, minmax(12rem, 16vw));
+    grid-template-columns: minmax(.5rem, 1fr) repeat(3, minmax(12rem, 16vw)) minmax(.5rem, 1fr);
+    gap: 4vw;
+    justify-content: center;
+    align-items: center;
+
+
+
+    //& > :not(:nth-child(4))::before {
+    & > *::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 50%;
+        background-color: rgba($color: #000000, $alpha: .15);
+    }
+
     
+    .outter-hex{
+        grid-column: 3/4;
+        grid-row: 2/3;
+        height: 100%;
+        width: 100%;
+        background: rgba($color-medium-turquoise, 1.0);
+        transform: scale(1);
+
+    }
+    &__item {
+        height: 100%;
+        width: 100%;
+        background: rgba($color-medium-turquoise, 1.0);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 7%;
+        position: relative;
+
+        @media only screen and (max-width: $bp-medium) {
+            
+        }
+
+        & span {
+            text-align: center;
+            text-transform: capitalize;
+            font-family: $font-tertiary;
+            color: $color-platinium;
+            font-weight: 400;
+            letter-spacing: 5px;
+            font-size: $font-mini;
+            line-height: 1.2;
+            
+            @media only screen and (max-width: $bp-medium) {
+                font-size: $font-mini;
+                letter-spacing: 2px;
+                font-weight: 200;
+                
+                
+            }
+
+            @media only screen and (min-width: $bp-large) {
+                font-size: $font-med;
+            }
+
+            @media only screen and (min-width: $bp-largest) {
+                font-size: $font-large;
+                line-height: 1.6;
+            }
+        }
+
+
+        &--1 {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            transform: translate(calc(50% + (4vw / 2)), 25%);
+        }
+
+        &--2 {
+            grid-column: 4/5;
+            grid-row: 1/2;
+            transform: translate(calc(-50% - (4vw / 2)), 25%);
+        }
+
+        &--3 {
+            grid-column: 2/3;
+            grid-row: 2/3;
+        }
+
+        
+
+        &--4 {
+            background-image: linear-gradient(to bottom, rgba(0, 0, 0, .4) 0%, rgba(0, 0, 0, .01) 100%),
+                url(../img/jpg/mini.jpg);
+            background-image: url(../img/jpg/mini.jpg);
+            background-size: cover;
+            background-position: center;
+            transform: scale(0.95);
+        }
+
+        &--5 {
+            grid-column: 4/5;
+            grid-row: 2/3;
+        }
+
+        &--6 {
+            grid-column: 2/3;
+            grid-row: 3/4;
+            transform: translate(calc(50% + (4vw / 2)), -25%);
+        }
+
+        &--7 {
+            grid-column: 4/5;
+            grid-row: 3/4;
+            transform: translate(calc(-50% - (4vw / 2)), -25%);
+        }
+    }
 }
