--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,72 +1,138 @@
 .header {
-    background-color: $color-quinacridone-magenta;
-    grid-row: 1/3;
-    grid-column: full-start/full-end;
-    position: relative;
+  // background-color: black;
+  grid-row: 1 / 3;
+  grid-column: full-start/full-end;
+  position: relative;
+}
+
+
+
+.hexagons-box {
+  background: black;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  animation: change-color 4s linear infinite;
+  // z-index: 1;
+}
+
+.header__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+
+
+  &--text {
+    color: rgba($color-platinium, 1.0);
+    font-size: $font-med;
+    font-family: $font-primary;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    letter-spacing: .7rem;
+    white-space: normal;
+    pointer-events: none;
 
     
-  }
-   
-  .hexagons-box{
-    background: black;
-    position: relative;
-    height: 100%;
-    overflow: hidden;
-    animation: change-color 4s linear infinite;
-    
-}
-
-
-.row{
-    display: inline-flex;
-    margin-top: -30px;
-    margin-left: -55px;
-}
-.row:nth-child(even){
-  margin-left: 1px;
-}
-.hexagon{
-    position: relative;
-    background: #111;
-      width: 110px;    
-      height: 110px;
-      clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
-      margin: 2px;    
-      transition: 2s;
-      cursor: pointer;
-      &:hover{
-        transition: 0s;
-        background: orangered;
-      }
-      &:before{
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 50%;
-        height: 100%;
-        background: rgba(0,0,0,.3);
-        z-index: 3;
-      }
-      &:after{
-        content: '';
-        position: absolute;
-        top: 5px;
-        bottom: 5px;
-        left: 5px;
-        right: 5px;
-        background: #111;
-        clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
-        z-index: 5;
-        
-      }
+    @media only screen and (max-width: $bp-mini) {
+      font-size: $font-mini;
     }
     
-@keyframes change-color{
-  0%{
+    
+    @media only screen and (min-width: $bp-big) {
+      font-size: $font-large;
+      
+    }
+    
+    @media only screen and (min-width: $bp-largest) {
+      font-size: $font-huge;
+      // font-size: $font-massive;
+      
+    }
+
+    & span {
+      font-family: inherit;
+      color: $color-tangerine;
+      color: $color-red-salsa;
+    }
+
+  }
+}
+
+
+.header::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 60px;
+  // background: linear-gradient(to bottom, transparent 0%, rgba(15, 15, 15, .8)50%, rgba(15, 15, 15, 1)100%);
+  background: linear-gradient(to bottom, transparent 0%, transparent 50%, rgba(15, 15, 15, 1)100%);
+}
+
+
+.row {
+
+  display: inline-flex;
+  z-index: 6;
+  margin-top: -30px;
+  margin-left: -55px;
+}
+
+.row:nth-child(even) {
+  margin-left: 1px;
+}
+
+
+.hexagon {
+  position: relative;
+  background: #111;
+  width: 110px;
+  height: 110px;
+
+  margin: 2px;
+  transition: 2s;
+  cursor: pointer;
+
+  &:hover {
+    transition: 0s;
+    background: orangered;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(0, 0, 0, .3);
+    z-index: 3;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    top: 5px;
+    bottom: 5px;
+    left: 5px;
+    right: 5px;
+    background: #111;
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    z-index: 5;
+
+  }
+}
+
+@keyframes change-color {
+  0% {
     filter: hue-rotate(0deg);
-  } 
-  100%{
+  }
+
+  100% {
     filter: hue-rotate(360deg);
   }
 
