--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,93 +1,196 @@
+.nav.colored{
+    background: rgba($color-indigo-dye-dark, .95);
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    box-shadow: 0 5px 15px rgba(1, 1, 1, .3);
+}
+
 .nav {
-    background: rgba(0, 0, 0, .6);
+    background: transparent;
     grid-row: 1/2;
     grid-column: full-start/full-end;
-    top: 0;
     z-index: 10;
-
+    
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    align-content: center;
+    transition: all .2s ease-in-out;
     position: sticky;
     top: 0;
 
-    @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-        -webkit-backdrop-filter: blur(5px);
-        backdrop-filter: blur(10px);
-
-    }
-
-
-    &__logo {
-        margin-left: 3rem;
+    &__logo{
         display: flex;
-        justify-content: center;
         align-items: center;
-        color: rgba($color-platinium, 1.0);
+        justify-content: center;
+        margin-left: 4rem;
+        color: $color-platinium;
+    }
+    .logo__link{
+        text-decoration: none;
+        color: currentColor;
+    }
 
-
-        &--middle {
-            // background: lightsalmon;
-            font-size: $font-huge;
-            font-weight: 400;
-            font-family: $font-secondary;
-
-        }
-
-        &--arrow-back {
-            transform: rotate(180deg);
-        }
-
-        &--arrow-front,
-        &--arrow-back {
-            height: 40px;
-            width: 40px;
-            fill: currentColor;
-        }
+    .logo__icon{
+        height: 7vh;
 
     }
 
-    &__container {
+    &__list {
+        // background: grey;
+        min-width: 60%;
         list-style: none;
         display: flex;
+        justify-content: space-evenly;
+        margin-left: auto;
+
+        .nav__item {
+            // background-color: orangered;
+            flex: 1;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 1rem;
+
+        }
+
+        .nav__link {
+            color: $color-platinium;
+            text-decoration: none;
+            font-size: $font-small;
+            font-family: $font-tertiary;
+            font-weight: 400;
+            letter-spacing: .3rem;
+            text-transform: uppercase;
+            transition-duration: .2s;
+            position: relative;
+
+            &::before {
+                content: '';
+                position: absolute;
+                height: 2px;
+                width: 80%;
+                bottom: -3px;
+                left: 10%;
+                border-radius: 1rem;
+                transform: scale(0);
+                transition: all .6s;
+                background: $color-platinium;
+
+            }
+
+            &:hover,
+            &:active {
+
+                &::before {
+                    transform: scale(1.5, 1);
+                }
+            }
+
+        }
 
     }
 
-    &__item {
-        margin: 1rem;
-        color: $color-platinium;
-        text-decoration: none;
-        font-size: $font-small;
-        font-family: $font-tertiary;
-        font-weight: 400;
-        letter-spacing: .6rem;
-        padding: 1rem 2rem;
-        text-align: center;
-        text-transform: uppercase;
-        transition-duration: .2s;
-        position: relative;
 
-        &::before {
-            content: '';
-            position: absolute;
-            height: 2px;
-            width: 80%;
-            bottom: 0;
-            left: 10%;
-            border-radius: 10px;
-            transform: scale(0);
-            transition: all .6s;
-            background: $color-platinium;
 
+
+}
+
+@media only screen and (max-width: $bp-medium) {
+
+    .nav__toggler {
+        position: absolute;
+        // background-color: red;
+        top: -50%;
+        right: 3%;
+        transform: translate(-3%, 50%);
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 6rem;
+        transition: all .4s ease-in;
+        z-index: 50;        
+        
+    }
+    .nav__toggler:hover .line {
+        width: 3rem;
+    }
+    
+    .line {
+        // width: 30px;
+        height: .3rem;
+        border-radius: 50px;
+        background: white;
+        margin: .5rem;
+        transition: all .3s ease-in-out;
+
+        &--1 {width: 3rem;}
+
+        &--2 {width: 2rem;}
+
+        &--3 {width: 1rem;}
+    }
+
+    .nav__list {
+        position: absolute;
+        height: 100vh;
+        width: 100%;
+        flex-direction: column;
+        // display: none;
+        -webkit-clip-path: circle(30px at 95% -10%);
+        clip-path: circle(30px at 95% -10%);
+        transition: all .5s ease-in-out;
+        pointer-events: none;
+        
+        background: rgba($color-indigo-dye-dark, .9);
+        
+        @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
         }
 
-        &:hover,
-        &:active {
+    }
 
-            &::before {
-                transform: scale(1);
-            }
-        }
+    .nav__list.open {
+        -webkit-clip-path: circle(150vh at 95% -10%);
+        clip-path: circle(150vh at 95% -10%);
+        pointer-events: all;
+    }
+
+
+    .nav__item {
+        opacity: 0;
+
+    }
+
+    .nav__item.fade {
+        opacity: 1;
+    }
+
+
+    .nav__link {
+        font-size: $font-large !important;
+    }
+
+    .nav__item:nth-child(1) {
+        transition: all 0.5s ease 0.2s;
+
+    }
+
+    .nav__item:nth-child(2) {
+        transition: all 0.5s ease 0.4s;
+
+    }
+
+    .nav__item:nth-child(3) {
+        transition: all 0.5s ease 0.6s;
+
+    }
+
+    .nav__item:nth-child(4) {
+        transition: all 0.5s ease 0.7s;
+
     }
 
 }
