--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,44 +1,54 @@
-.projects{
+.projects {
     background-color: rgba($color-silver, .3);
     grid-row: 4/5;
-    grid-column: full-start/full-end;    
+    grid-column: full-start/full-end;
     padding: $padding-big 10%;
-    
-    &__container{
-        // height: 60vh;
+
+    &__container {
         // background: grey;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-        gap: 10rem 5rem;        
+        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+        grid-auto-rows: 50rem;
+
+        column-gap: 7rem;
+        row-gap: 10rem;
         justify-content: center;
+        align-items: center;
+        // align-content: center;
     }
-    
+
 }
 
-.card{
-    perspective: 180rem;
+.card {
     -moz-perspective: 180rem;
+         perspective: 180rem;
     position: relative;
-    height: 75vh;
-    max-width: 40rem;
-    
-    
-    &__side{
+    height: 100%;
+    width: 100%;
+    max-width: 35rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+
+
+    &__side {
         background: rgba($color-white, .6);
         height: inherit;
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;    
-        transition: all 1s ease-in-out;
+        width: 100%;
+        // transition: all .85s ease-in-out;
+        transition: all 1.3s cubic-bezier(.12,.12,.3,1.52);
         backface-visibility: hidden;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
         transform-style: preserve-3d;
-        
-        
-        &::after{
+
+
+        &::after {
             content: '';
             position: absolute;
             background: rgba($color-raisin-black, 50%);
@@ -50,26 +60,26 @@
             z-index: -1;
             filter: blur(12px);
         }
-        
-        
-        &--front{     
+
+
+        &--front {
             transform: rotateY(0);
         }
-        
-        &--back{
+
+        &--back {
             transform: rotateY(180deg);
         }
     }
-    
-    &:hover &__side--front{
+
+    &:hover &__side--front {
         transform: rotateY(-180deg);
     }
-    
-    &:hover &__side--back{
+
+    &:hover &__side--back {
         transform: rotateY(0);
     }
-    
-    &__image{
+
+    &__image {
         // height: calc(100% - 33.33%);
         flex: 1;
         // object-fit: cover;
@@ -78,51 +88,54 @@
         background-position: center;
         // border-radius: 5px 5px 0 0;//same border radius than SIDE
         background-blend-mode: screen;
-        
-        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100% );
+
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         border-radius: 5px 5px 0 0;
-        
-        &--1{
-            background-image:   linear-gradient(to bottom, rgba($color-tangerine, .7) 0%, rgba($color-white, .01) 100%),
-                                url(../img/jpg/project.jpg);
-                    }
+
+        &--1 {
+            background-image: linear-gradient(to bottom, rgba($color-tangerine, .7) 0%, rgba($color-white, .01) 100%),
+                url(../img/jpg/project.jpg);
+        }
     }
-    
-    &__title{
+
+    &__title {
         border: 1px solid rgba($color-tangerine, .5);
         font-family: $font-primary;
-        font-size: $font-big;
+        font-size: $font-large;
         font-weight: 400;
         align-self: center;
         margin: 3rem 0;
         padding: .5rem 3rem;
-        position: relative; 
-        color: $color-raisin-black;
-        
-       
+        position: relative;
+        color: $color-sonic-silver;
+
+
     }
-    span.tab{
+
+    span.tab {
         background-color: rgba($color-tangerine, 1.0);
         height: 5rem;
-        &--upper{
-            clip-path: polygon(0 0, 100% 0, 100% 5%,0 100% );
+
+        &--upper {
+            clip-path: polygon(0 0, 100% 0, 100% 5%, 0 100%);
             border-radius: 5px 5px 0 0;
         }
 
-        &--lower{
-            clip-path: polygon(0 95%, 100% 0, 100% 100%,0 100% );
+        &--lower {
+            clip-path: polygon(0 95%, 100% 0, 100% 100%, 0 100%);
             border-radius: 0 0 5px 5px;
         }
     }
-    .project__description{
+
+    .project__description {
         height: 60%;
         // background-color: yellowgreen;
         flex: 1;
         display: flex;
         flex-direction: column;
 
-        
-        &--top{
+
+        &--top {
             // background-color: lightslategray;
             flex: 1;
             overflow-y: auto;
@@ -132,11 +145,11 @@
             font-size: $font-med;
             font-weight: 400;
             margin: 1rem 0;
-            
-        }
-       
 
-        &--bottom{
+        }
+
+
+        &--bottom {
             // background-color: lightskyblue;
             flex: 0 1 5rem;
             display: flex;
@@ -144,29 +157,29 @@
             position: relative;
             padding: 1.5rem 0;
 
-            &::before{
+            &::before {
                 position: absolute;
                 content: '';
                 top: 0;
                 left: 15%;
                 width: 70%;
                 height: 1px;
-                background: rgba($color-sonic-silver,  .15);
+                background: rgba($color-sonic-silver, .15);
             }
-            
-            &::after{
+
+            &::after {
                 position: absolute;
                 content: '';
                 bottom: 0;
                 left: 15%;
                 width: 70%;
                 height: 1px;
-                background: rgba($color-sonic-silver,  .15);
+                background: rgba($color-sonic-silver, .15);
             }
         }
     }
-    
-    .project__icon{
+
+    .project__icon {
         height: 30px;
         width: 30px;
         fill: rgba($color-electric-indigo, .4);
@@ -174,13 +187,13 @@
         margin: 0 1.5rem;
         // transform: perspective(500px) translateZ(35px);
         // backface-visibility: hidden;
-        
+
     }
 
-    .project__btn-box{
+    .project__btn-box {
         display: flex;
         justify-items: center;
-        padding: 5rem 0;        
+        padding: 5rem 0;
         position: relative;
         // background: lightcoral;
         // transform: perspective(500px) translateZ(35px);
@@ -188,6 +201,6 @@
     }
 
 
-    
+
 
 }
