--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -7,14 +7,14 @@
     color: $color-raisin-black;    
     
     &__box{
-        // background: red ;
         display: grid;
         grid-template-columns: repeat(6, minmax(fit-content, 1fr));
+        grid-template-columns: repeat(6, minmax(max-content, 1fr));
         grid-template-rows: repeat(2, min-content);
         column-gap: 1rem;
         border: 1.5px solid rgba($color-celeste, .6);
         border-radius: 7px;  
-        overflow: hidden;
+        // overflow: hidden;
     }
     
     &__content{
@@ -25,9 +25,9 @@
         
     }
     &__card{
-        flex: 1 0 200px ;
-        padding: 4rem 1rem;
-        flex-wrap: wrap;
+        flex: 1 0 250px ;
+        padding: 2rem;
+
 
         &:not(:nth-last-child(1)){    
             border-right: 1.5px solid rgba($color-celeste, .4);
@@ -41,20 +41,32 @@
             align-items: center;
             flex-direction: column;
             min-height: 10rem;
-            // background-color: blue;
+            margin: 1rem 0;
+            // background-color: lightblue;
+            position: relative;
+            &::after{
+                content: '';
+                position: absolute;
+                bottom: 0;
+                right: 10%;
+                height: 1px;
+                width: 80%;
+                background: rgba($color-celeste, .3);
+                border-radius: 100px;
+            }
             
         }
         
         &__icon{
             fill: rgba($color-tangerine, .8);
-            height: 3.5rem;
-            width: 3.5rem;
+            height: 4rem;
+            width: 4rem;
             margin-bottom: 1rem;
         }
         &__title{
-            color: rgba($color-sonic-silver, .9);
-            font-weight: 600;
-            font-size: $font-med;
+            color: rgba($color-sonic-silver, .8);
+            font-weight: 400;
+            font-size: $font-large;
             text-transform: uppercase;
             text-align: center;
             
@@ -64,16 +76,18 @@
             list-style: none;
             display: flex;
             flex-wrap: wrap;
-            margin-top: .5rem;
+            margin-top: 1rem;
             // background-color: red ;
+
             & li{
-                flex: 1 1 100%;
-                margin-top: .5rem 0;
+                flex: 1 0 100%;
+                line-height: 2;
                 font-family: $font-tertiary;
-                font-size: $font-small;
+                font-size: $font-med;
                 text-transform: capitalize;
-                font-weight: 300;
+                font-weight: 400;
                 text-align: center;
+                color: rgba($color-sonic-silver, $alpha: .8);
             
 
             }
